[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Itim_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/ResourceTab.gd" type="Script" id=3]

[sub_resource type="StyleBoxTexture" id=1]

[node name="ResourceTab" type="MarginContainer"]
anchor_right = 1.0
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 568.0
margin_bottom = 108.0

[node name="HSplitContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 560.0
margin_bottom = 48.0

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HSplitContainer"]
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.0
stretch_mode = 6

[node name="Label" type="Label" parent="VBoxContainer/HSplitContainer"]
margin_left = 4.0
margin_right = 560.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 560.0
margin_bottom = 100.0
alignment = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 252.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
align = 2

[node name="Label3" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 256.0
margin_right = 304.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 0 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 1

[node name="Label4" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 560.0
margin_bottom = 48.0
size_flags_horizontal = 3
custom_styles/normal = SubResource( 1 )
custom_fonts/font = ExtResource( 1 )
valign = 1
